Kubernetes/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: kv-service
spec:
  type: NodePort
  selector:
     app: kv-store
  ports:
    - port: 80
      targetPort: 9000
      nodePort: 30007
